test(patient-service): complete unit and integration tests